--- a/styles/guitarStyle.css
+++ b/styles/guitarStyle.css
@@ -1,12 +1,13 @@
 #guitar{
-    position:absolute;
+    position: absolute;
+    margin-left: 90px;
     margin-top:60px;
-    margin-left:90px;    
+    /*margin-left:90px; */
 }
 
 .gitString{
     position:absolute;
-    background-color:black;
+    background-color:#2B353E;
     
     height: 2px;
     width: 800px;
@@ -28,20 +29,29 @@
     
 }
 #guitarBackground{
-    background-color:#959799; 
+    /*background-color:#959799;*/
     position:relative;
     width:auto;
-    height:350px;
+    height:280px;
 }
 .fretNumbs{
     font-family:'Arial',sans-serif;
     top: 240px;
     position:absolute;
-    color: black;
+    color: #959799;
 }
 .stringlabel{
     font-family:'Arial',sans-serif;
     left: -25px;
     position:absolute;
-    color: black;
+    color: #959799;
+}
+
+.fretOrientPos{
+    position:   absolute;
+    background-color: goldenrod;
+    height:     150px;
+    width:      50px;
+    top:        20px;
+    z-index:    0;
 }
